--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "jsonwebtoken": "^9.0.2",
+    "mercadopago": "^2.3.0",
     "mongoose": "^8.9.5"
   }
 }
