--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,8 @@
 PORT=3000
 
 
-MONGO_URL= mongodb://mongo-user:123456@localhost:27018
+MONGO_URL='mongodb://mongo-user:123456@localhost:27017/?replicaSet=rs0'
+# MONGO_URL= mongodb://mongo-user:123456@localhost:27018
 MONGO_DB_NAME= mystore
 
 JWT_SEED=afd58c9ccf565ccb725d5ee2f52fa2af
