--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,18 +19,36 @@
 
 
 # este es el archivo de docker-compose para la version de mongo con replicas
+# version: '3.8'
+
+# services:
+#   mongo-db:
+#     image: mongo:6.0.6
+#     restart: always
+#     environment:
+#       MONGO_INITDB_ROOT_USERNAME: mongo-user
+#       MONGO_INITDB_ROOT_PASSWORD: 123456
+#     volumes:
+#       - ./mongo:/data/db
+#       - ./mongo-keyfile:/data/mongo-keyfile
+#     ports:
+#       - 27017:27017
+#     command: sh -c "ls -l /data/mongo-keyfile && stat /data/mongo-keyfile/mongodb-keyfile && chmod 0600 /data/mongo-keyfile/mongodb-keyfile && stat /data/mongo-keyfile/mongodb-keyfile && mongod --replSet rs0 --bind_ip_all --keyFile /data/mongo-keyfile/mongodb-keyfile"
+
+
+
 version: '3.8'
 
 services:
   mongo-db:
-    image: mongo:6.0.6
+    # Usa tu imagen personalizada (reemplaza "tunombre" con tu nombre de usuario de Docker Hub)
+    image: laivetta/mongo-transaccional:v.1.1
     restart: always
     environment:
       MONGO_INITDB_ROOT_USERNAME: mongo-user
       MONGO_INITDB_ROOT_PASSWORD: 123456
     volumes:
+      # Solo necesitas montar el volumen para los datos persistentes
       - ./mongo:/data/db
-      - ./mongo-keyfile:/data/mongo-keyfile
     ports:
       - 27017:27017
-    command: sh -c "ls -l /data/mongo-keyfile && stat /data/mongo-keyfile/mongodb-keyfile && chmod 0600 /data/mongo-keyfile/mongodb-keyfile && stat /data/mongo-keyfile/mongodb-keyfile && mongod --replSet rs0 --bind_ip_all --keyFile /data/mongo-keyfile/mongodb-keyfile"
