--- a/.env.template
+++ b/.env.template
@@ -2,6 +2,7 @@ PORT=3000
 
 
 MONGO_URL='mongodb://mongo-user:123456@localhost:27017/?replicaSet=rs0'
+MONGO_URL='mongodb://mongo-user:123456@localhost:27017/admin?authSource=admin&directConnection=true'
 # MONGO_URL= mongodb://mongo-user:123456@localhost:27018
 MONGO_DB_NAME= mystore
 
