code mp ready, endpoints postman and waiting check

--- a/.env.template
+++ b/.env.template
@@ -7,3 +7,11 @@ MONGO_URL='mongodb://mongo-user:123456@localhost:27017/admin?authSource=admin&di
 MONGO_DB_NAME= mystore
 
 JWT_SEED=afd58c9ccf565ccb725d5ee2f52fa2af
+
+
+# Mercado Pago
+MERCADO_PAGO_PUBLIC_KEY=your-public-key
+MERCADO_PAGO_ACCESS_TOKEN=your-access-token
+
+# Frontend URL
+FRONTEND_URL=http://localhost:5173
