create preference working, try to fix webhook

--- a/.env.template
+++ b/.env.template
@@ -10,6 +10,10 @@ JWT_SEED=afd58c9ccf565ccb725d5ee2f52fa2af
 
 
 # Mercado Pago
+# esto se obtiene de https://www.mercadopago.com.ar/developers/ ingresando con el usuario de prueba en modo incognito
+# es el access token de la cuenta de prueba para la intregacion
+# en este caso es del usuario de prueba, despues hay que cambiarlo por el de la cuenta real
+# se llaman exactamente igual en la pagina de mercado pago PUBLIC_KEY y ACCESS_TOKEN
 MERCADO_PAGO_PUBLIC_KEY=your-public-key
 MERCADO_PAGO_ACCESS_TOKEN=your-access-token
 
