--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.3",
@@ -22,13 +23,16 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "@types/uuid": "^10.0.0",
+    "axios": "^1.8.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "env-var": "^7.5.0",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "jsonwebtoken": "^9.0.2",
-    "mercadopago": "^1.5.14",
-    "mongoose": "^8.9.5"
+    "mongoose": "^8.9.5",
+    "uuid": "^11.1.0"
   }
 }
