chat bot working

--- a/.env.template
+++ b/.env.template
@@ -8,7 +8,7 @@ MONGO_DB_NAME= mystore
 
 JWT_SEED=afd58c9ccf565ccb725d5ee2f52fa2af
 
-
+----------- TESTING ------------
 # Mercado Pago
 # esto se obtiene de https://www.mercadopago.com.ar/developers/ ingresando con el usuario de prueba en modo incognito
 # es el access token de la cuenta de prueba para la intregacion
@@ -16,6 +16,17 @@ JWT_SEED=afd58c9ccf565ccb725d5ee2f52fa2af
 # se llaman exactamente igual en la pagina de mercado pago PUBLIC_KEY y ACCESS_TOKEN
 MERCADO_PAGO_PUBLIC_KEY=your-public-key
 MERCADO_PAGO_ACCESS_TOKEN=your-access-token
+
+# ChatBot LLM API Keys
+ANTHROPIC_API_KEY='tu-api-key-de-claude'  # API Key para Claude (Anthropic)
+OPENAI_API_KEY='tu-api-key-de-openai' 
+
+
+# Configuración de embeddings
+EMBEDDING_MODEL_PATH='./models'  # Ruta donde se guardarán los modelos de embedding
+
+
+NODE_ENV=development
 
 # Frontend URL
 FRONTEND_URL=http://localhost:5173
