--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "langchain": "^0.3.19",
     "mongoose": "^8.9.5",
     "onnxruntime-node": "^1.20.1",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   }
 }
