--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.3",
     "@types/supertest": "^2.0.16",
+    "@types/winston": "^2.4.4",
     "jest": "^29.7.0",
     "jest-html-reporter": "^4.0.1",
     "mongodb-memory-server": "^8.15.1",
