--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
+    "@types/express": "^5.0.1",
     "@types/jest": "^29.5.10",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^22.10.3",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/node": "^22.13.10",
     "@types/supertest": "^2.0.16",
+    "@types/uuid": "^10.0.0",
     "@types/winston": "^2.4.4",
     "jest": "^29.7.0",
     "jest-html-reporter": "^4.0.1",
@@ -40,10 +41,11 @@
   },
   "dependencies": {
     "@langchain/community": "^0.3.33",
+    "@langchain/core": "^0.3.42",
     "@langchain/mongodb": "^0.1.0",
-    "@types/uuid": "^10.0.0",
+    "@langchain/openai": "^0.4.5",
     "@xenova/transformers": "^2.17.2",
-    "axios": "^1.8.1",
+    "axios": "^1.8.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -52,7 +54,7 @@
     "express-rate-limit": "^7.5.0",
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.19",
-    "mongoose": "^8.9.5",
+    "mongoose": "^8.12.1",
     "onnxruntime-node": "^1.20.1",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
