upload images cloudinary

--- a/.env.template
+++ b/.env.template
@@ -33,3 +33,11 @@ FRONTEND_URL=http://localhost:5173
 
 
 URL_RESPONSE_WEBHOOK_NGROK="fad"
+
+
+# para subir archivos a la nube
+CLOUDINARY_CLOUD_NAME=tu_cloud_name
+CLOUDINARY_API_KEY=tu_api_key
+CLOUDINARY_API_SECRET=tu_api_secret
+
+CLOUDINARY_URL=cloudinary://CLOUDINARY_API_KEY:CLOUDINARY_API_SECRET@CLOUDINARY_CLOUD_NAME
