--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.10",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.13.10",
     "@types/supertest": "^2.0.16",
     "@types/uuid": "^10.0.0",
@@ -47,6 +48,7 @@
     "@xenova/transformers": "^2.17.2",
     "axios": "^1.8.4",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "env-var": "^7.5.0",
@@ -55,6 +57,7 @@
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.19",
     "mongoose": "^8.12.1",
+    "multer": "^1.4.5-lts.2",
     "onnxruntime-node": "^1.20.1",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
