--- a/.env.template
+++ b/.env.template
@@ -41,3 +41,16 @@ CLOUDINARY_API_KEY=tu_api_key
 CLOUDINARY_API_SECRET=tu_api_secret
 
 CLOUDINARY_URL=cloudinary://CLOUDINARY_API_KEY:CLOUDINARY_API_SECRET@CLOUDINARY_CLOUD_NAME
+
+
+EMAIL_SERVICE=gmail
+EMAIL_USER=<tu_correo_gmail>@gmail.com
+# Para Gmail, usa una "Contraseña de aplicación" si tienes 2FA activada
+EMAIL_PASS=<tu_contraseña_o_contraseña_de_aplicacion>
+EMAIL_SENDER_NAME=Tu Tienda Online
+
+
+#-------------------------------------
+# Frontend & Webhook Configuration
+#-------------------------------------
+FRONTEND_URL=http://localhost:4200 # Asegúrate que esta sea la URL donde corre tu frontend
