--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/jest": "^29.5.10",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.10",
+    "@types/nodemailer": "^6.4.17",
     "@types/supertest": "^2.0.16",
     "@types/uuid": "^10.0.0",
     "@types/winston": "^2.4.4",
@@ -58,6 +59,7 @@
     "langchain": "^0.3.19",
     "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.2",
+    "nodemailer": "^6.10.0",
     "onnxruntime-node": "^1.20.1",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
