--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,7 @@
 PORT=3000
 
+DEFAULT_NEIGHBORHOOD_ID="barrio por defecto"
+
 
 MONGO_URL='mongodb://mongo-user:123456@localhost:27017/?replicaSet=rs0'
 MONGO_URL='mongodb://mongo-user:123456@localhost:27017/admin?authSource=admin&directConnection=true'
