add middleware routes.cart.ts

--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,7 @@
 PORT=3000
 
-DEFAULT_NEIGHBORHOOD_ID="barrio por defecto"
+# neighborhood_id por defecto, debe existir en la base de datos
+DEFAULT_NEIGHBORHOOD_ID=67fd92c5bef53c4202971124
 
 
 MONGO_URL='mongodb://mongo-user:123456@localhost:27017/?replicaSet=rs0'
@@ -48,7 +49,8 @@ CLOUDINARY_URL=cloudinary://CLOUDINARY_API_KEY:CLOUDINARY_API_SECRET@CLOUDINARY_
 EMAIL_SERVICE=gmail
 EMAIL_USER=<tu_correo_gmail>@gmail.com
 # Para Gmail, usa una "Contraseña de aplicación" si tienes 2FA activada
-EMAIL_PASS=<tu_contraseña_o_contraseña_de_aplicacion>
+EMAIL_PASS=<tu_contraseña_o_contraseña_de_aplicacion>  //debe ser la de dos pasos https://myaccount.google.com/security
+
 EMAIL_SENDER_NAME=Tu Tienda Online
 
 
