--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start1": "npm run build && node dist/app.js",
     "start": "node --max-old-space-size=512 dist/app.js",
     "generate-embeddings": "node src/infrastructure/adapters/transformers-bridge.mjs",
+    "seed": "tsnd src/seeders/index.ts",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
@@ -47,7 +48,7 @@
     "@langchain/openai": "^0.4.5",
     "@types/multer": "^1.4.12",
     "@xenova/transformers": "^2.17.2",
-    "axios": "^1.8.4",
+    "axios": "^1.9.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
@@ -59,6 +60,7 @@
     "langchain": "^0.3.19",
     "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.2",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.0",
     "onnxruntime-node": "^1.20.1",
     "uuid": "^11.1.0",
