telegram notification working

--- a/.env.template
+++ b/.env.template
@@ -54,6 +54,19 @@ EMAIL_PASS=<tu_contraseña_o_contraseña_de_aplicacion>  //debe ser la de dos pa
 EMAIL_SENDER_NAME=Tu Tienda Online
 
 
+
+# Telegram Service Configuration 
+#-------------------------------------
+Telegram_name = StartUp_test_luis_bot
+TELEGRAM_BOT_TOKEN=inicio:token_de_tu_bot
+TELEGRAM_CHAT_ID=chat_id
+
+
+#-------------------------------------
+# Service Configuration Notification Channels
+#-------------------------------------
+NOTIFICATION_CHANNELS=email,telegram
+
 #-------------------------------------
 # Frontend & Webhook Configuration
 #-------------------------------------
