--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "jest --runInBand --detectOpenHandles",
     "test:unit": "jest --testPathPattern=tests/unit",
     "test:integration": "jest --testPathPattern=tests/integration",
+    "test:smoke": "jest --testPathPattern=tests/smoke --detectOpenHandles --forceExit",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
   },
