--- a/package.json
+++ b/package.json
@@ -16,13 +16,20 @@
     "test:integration": "jest --testPathPattern=tests/integration",
     "test:smoke": "jest --testPathPattern=tests/smoke --detectOpenHandles --forceExit",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "test:performance": "PERFORMANCE_TARGET=render jest --testPathPattern=tests/performance --detectOpenHandles --forceExit --runInBand",
+    "test:performance:local": "jest --testPathPattern=tests/performance --detectOpenHandles --forceExit --runInBand",
+    "test:performance:basic": "jest --testPathPattern=tests/performance/basic-load --detectOpenHandles --forceExit",
+    "test:performance:artillery": "jest --testPathPattern=tests/performance/artillery --detectOpenHandles --forceExit",
+    "test:performance:endpoints": "jest --testPathPattern=tests/performance/endpoint-specific --detectOpenHandles --forceExit",
+    "performance:warmup": "node -e \"const { warmupServer } = require('./dist/tests/performance/performance-utils'); warmupServer().then(() => console.log('Warmup complete')).catch(console.error);\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/autocannon": "^7.12.7",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
@@ -33,6 +40,8 @@
     "@types/supertest": "^2.0.16",
     "@types/uuid": "^10.0.0",
     "@types/winston": "^2.4.4",
+    "artillery": "^2.0.21",
+    "autocannon": "^8.0.0",
     "jest": "^29.7.0",
     "jest-html-reporter": "^4.0.1",
     "mongodb-memory-server": "^8.15.1",
