--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "start": "node --max-old-space-size=512 dist/app.js",
     "generate-embeddings": "node src/infrastructure/adapters/transformers-bridge.mjs",
     "seed": "tsnd src/seeders/index.ts",
-    "test": "jest --runInBand --detectOpenHandles",
-    "test:unit": "jest --testPathPattern=tests/unit",
-    "test:integration": "jest --testPathPattern=tests/integration",
+    "test": "jest --runInBand --detectOpenHandles --selectProjects unit-integration",
+    "test:unit": "jest --testPathPattern=tests/unit --runInBand",
+    "test:integration": "jest --testPathPattern=tests/integration --runInBand",
     "test:smoke": "jest --testPathPattern=tests/smoke --detectOpenHandles --forceExit",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:performance": "PERFORMANCE_TARGET=render jest --testPathPattern=tests/performance --detectOpenHandles --forceExit --runInBand",
-    "test:performance:local": "jest --testPathPattern=tests/performance --detectOpenHandles --forceExit --runInBand",
+    "test:watch": "jest --watch --selectProjects unit-integration",
+    "test:coverage": "jest --coverage --selectProjects unit-integration",
+    "test:all": "jest --runInBand --detectOpenHandles",
+    "test:performance": "cross-env PERFORMANCE_TARGET=render jest --selectProjects performance --detectOpenHandles --forceExit --runInBand",
+    "test:performance:local": "jest --selectProjects performance --detectOpenHandles --forceExit --runInBand",
     "test:performance:basic": "jest --testPathPattern=tests/performance/basic-load --detectOpenHandles --forceExit",
     "test:performance:artillery": "jest --testPathPattern=tests/performance/artillery --detectOpenHandles --forceExit",
     "test:performance:endpoints": "jest --testPathPattern=tests/performance/endpoint-specific --detectOpenHandles --forceExit",
@@ -42,6 +43,7 @@
     "@types/winston": "^2.4.4",
     "artillery": "^2.0.21",
     "autocannon": "^8.0.0",
+    "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "jest-html-reporter": "^4.0.1",
     "mongodb-memory-server": "^8.15.1",
