render mongodb usage

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test:all": "jest --runInBand --detectOpenHandles",
     "test:performance": "cross-env PERFORMANCE_TARGET=render jest --selectProjects performance --detectOpenHandles --forceExit --runInBand",
     "test:performance:local": "jest --selectProjects performance --detectOpenHandles --forceExit --runInBand",
-    "test:performance:basic": "jest --testPathPattern=tests/performance/basic-load --detectOpenHandles --forceExit",    "test:performance:artillery": "jest --testPathPattern=tests/performance/artillery --detectOpenHandles --forceExit",
+    "test:performance:basic": "jest --testPathPattern=tests/performance/basic-load --detectOpenHandles --forceExit",
+    "test:performance:artillery": "jest --testPathPattern=tests/performance/artillery --detectOpenHandles --forceExit",
     "test:performance:endpoints": "jest --testPathPattern=tests/performance/endpoint-specific --detectOpenHandles --forceExit",
     "performance:warmup": "node -e \"const { warmupServer } = require('./dist/tests/performance/performance-utils'); warmupServer().then(() => console.log('Warmup complete')).catch(console.error);\"",
     "check:usage": "tsnd scripts/check-usage.ts",
