split smoke test, order status asignment test

--- a/package.json
+++ b/package.json
@@ -15,6 +15,17 @@
     "test:unit": "jest --testPathPattern=tests/unit --runInBand",
     "test:integration": "jest --testPathPattern=tests/integration --runInBand",
     "test:smoke": "jest --testPathPattern=tests/smoke --detectOpenHandles --forceExit",
+    "test:smoke:basic": "jest --testPathPattern=tests/smoke/basic --detectOpenHandles --forceExit",
+    "test:smoke:auth": "jest --testPathPattern=tests/smoke/auth --detectOpenHandles --forceExit",
+    "test:smoke:products": "jest --testPathPattern=tests/smoke/products --detectOpenHandles --forceExit",
+    "test:smoke:external": "jest --testPathPattern=tests/smoke/external-services --detectOpenHandles --forceExit",
+    "test:smoke:cart": "jest --testPathPattern=tests/smoke/cart --detectOpenHandles --forceExit",
+    "test:smoke:customers": "jest --testPathPattern=tests/smoke/customers --detectOpenHandles --forceExit",
+    "test:smoke:catalog": "jest --testPathPattern=tests/smoke/catalog --detectOpenHandles --forceExit",
+    "test:smoke:orders": "jest --testPathPattern=tests/smoke/orders --detectOpenHandles --forceExit",
+    "test:smoke:locations": "jest --testPathPattern=tests/smoke/locations --detectOpenHandles --forceExit",
+    "test:smoke:payments": "jest --testPathPattern=tests/smoke/payments --detectOpenHandles --forceExit",
+    "test:smoke:calculator": "jest --testPathPattern=price-calculator.smoke.test.ts --detectOpenHandles --forceExit",
     "test:watch": "jest --watch --selectProjects unit-integration",
     "test:coverage": "jest --coverage --runInBand --detectOpenHandles --selectProjects unit-integration",
     "test:all": "jest --runInBand --detectOpenHandles",
