--- a/.env.template
+++ b/.env.template
@@ -19,6 +19,9 @@ JWT_SEED=afd58c9ccf565ccb725d5ee2f52fa2af
 # se llaman exactamente igual en la pagina de mercado pago PUBLIC_KEY y ACCESS_TOKEN
 MERCADO_PAGO_PUBLIC_KEY=your-public-key
 MERCADO_PAGO_ACCESS_TOKEN=your-access-token
+MERCADO_PAGO_Client_ID=your-data
+MERCADO_PAGO_CLIENT_SECRET=your-data
+
 
 # ChatBot LLM API Keys
 ANTHROPIC_API_KEY='tu-api-key-de-claude'  # API Key para Claude (Anthropic)
