--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@langchain/core": "^0.3.42",
     "@langchain/mongodb": "^0.1.0",
     "@langchain/openai": "^0.4.5",
+    "@types/morgan": "^1.9.10",
     "@types/multer": "^1.4.12",
     "@xenova/transformers": "^2.17.2",
     "axios": "^1.9.0",
@@ -87,6 +88,7 @@
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.19",
     "mongoose": "^8.12.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.1",
