--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "dev": "tsnd --respawn --clear src/app.ts",
     "build1": "rimraf ./dist && tsc",
     "build": "tsc",
+    "build:production": "npm install --production=false && tsc",
+    "build:safe": "npm install --ignore-optional && tsc",
     "start1": "npm run build && node dist/app.js",
     "start": "node --max-old-space-size=512 dist/app.js",
+    "postinstall": "node scripts/postinstall.js || true",
     "generate-embeddings": "node src/infrastructure/adapters/transformers-bridge.mjs",
     "seed": "tsnd src/seeders/index.ts",
     "test": "jest --runInBand --detectOpenHandles --selectProjects unit-integration",
@@ -70,13 +73,6 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
-    "@langchain/community": "^0.3.33",
-    "@langchain/core": "^0.3.42",
-    "@langchain/mongodb": "^0.1.0",
-    "@langchain/openai": "^0.4.5",
-    "@types/morgan": "^1.9.10",
-    "@types/multer": "^1.4.12",
-    "@xenova/transformers": "^2.17.2",
     "axios": "^1.9.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.6.0",
@@ -86,15 +82,24 @@
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "jsonwebtoken": "^9.0.2",
-    "langchain": "^0.3.19",
     "mongoose": "^8.12.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.1",
-    "onnxruntime-node": "^1.20.1",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
-    "winston-daily-rotate-file": "^5.0.0"
+    "winston-daily-rotate-file": "^5.0.0",
+    "@types/morgan": "^1.9.10",
+    "@types/multer": "^1.4.12"
+  },
+  "optionalDependencies": {
+    "@langchain/community": "^0.3.33",
+    "@langchain/core": "^0.3.42",
+    "@langchain/mongodb": "^0.1.0",
+    "@langchain/openai": "^0.4.5",
+    "@xenova/transformers": "^2.17.2",
+    "langchain": "^0.3.19",
+    "onnxruntime-node": "^1.20.1"
   }
 }
