--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "@types/multer": "^1.4.12",
     "axios": "^1.9.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.6.0",
@@ -83,15 +84,12 @@
     "express-rate-limit": "^7.5.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
-    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.1",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
-    "winston-daily-rotate-file": "^5.0.0",
-    "@types/morgan": "^1.9.10",
-    "@types/multer": "^1.4.12"
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "optionalDependencies": {
     "@langchain/community": "^0.3.33",
