--- a/package.json
+++ b/package.json
@@ -93,12 +93,13 @@
     "winston-daily-rotate-file": "^5.0.0"
   },
   "optionalDependencies": {
+    "@langchain/anthropic": "^0.3.24",
     "@langchain/community": "^0.3.33",
-    "@langchain/core": "^0.3.42",
+    "@langchain/core": "^0.3.66",
     "@langchain/mongodb": "^0.1.0",
     "@langchain/openai": "^0.4.5",
     "@xenova/transformers": "^2.17.2",
-    "langchain": "^0.3.19",
+    "langchain": "^0.3.30",
     "onnxruntime-node": "^1.20.1"
   }
 }
