rate limit change

--- a/.env.template
+++ b/.env.template
@@ -26,13 +26,37 @@ MERCADO_PAGO_CLIENT_SECRET=your-data
 # ChatBot LLM API Keys
 ANTHROPIC_API_KEY='tu-api-key-de-claude'  # API Key para Claude (Anthropic)
 OPENAI_API_KEY='tu-api-key-de-openai' 
-
+GEMINI_API_KEY='tu'
 
 # Configuración de embeddings
 EMBEDDING_MODEL_PATH='./models'  # Ruta donde se guardarán los modelos de embedding
 
 
-NODE_ENV=development
+# Entorno (cambia según necesidad)
+NODE_ENV=production  # Cambia a 'production' en producción o test, test desactiva completamente el rate-limiting o development para desarrollo
+
+
+#-------------------------------------
+# Rate Limiting Configuration
+#-------------------------------------
+
+# Rate Limiting Global (requests por ventana de tiempo)
+RATE_LIMIT_GLOBAL_MAX_PRODUCTION=1000
+RATE_LIMIT_GLOBAL_WINDOW_PRODUCTION=900000  # 15 minutos en ms
+RATE_LIMIT_GLOBAL_MAX_DEVELOPMENT=5000
+RATE_LIMIT_GLOBAL_WINDOW_DEVELOPMENT=60000  # 1 minuto en ms
+
+# Rate Limiting Auth (intentos de login por ventana de tiempo)
+RATE_LIMIT_AUTH_MAX_PRODUCTION=10
+RATE_LIMIT_AUTH_WINDOW_PRODUCTION=3600000   # 1 hora en ms
+RATE_LIMIT_AUTH_MAX_DEVELOPMENT=100
+RATE_LIMIT_AUTH_WINDOW_DEVELOPMENT=900000   # 15 minutos en ms
+
+# Rate Limiting Test (valores altos para testing, o usar 0 para deshabilitar)
+RATE_LIMIT_GLOBAL_MAX_TEST=10000
+RATE_LIMIT_GLOBAL_WINDOW_TEST=60000
+RATE_LIMIT_AUTH_MAX_TEST=1000  
+RATE_LIMIT_AUTH_WINDOW_TEST=60000
 
 # Frontend URL
 FRONTEND_URL=http://localhost:5173
@@ -48,13 +72,15 @@ CLOUDINARY_API_SECRET=tu_api_secret
 
 CLOUDINARY_URL=cloudinary://CLOUDINARY_API_KEY:CLOUDINARY_API_SECRET@CLOUDINARY_CLOUD_NAME
 
-
+#-------------------------------------
+# Email Service Configuration (Ejemplo Gmail)
+#-------------------------------------
 EMAIL_SERVICE=gmail
 EMAIL_USER=<tu_correo_gmail>@gmail.com
 # Para Gmail, usa una "Contraseña de aplicación" si tienes 2FA activada
 EMAIL_PASS=<tu_contraseña_o_contraseña_de_aplicacion>  //debe ser la de dos pasos https://myaccount.google.com/security
 
-EMAIL_SENDER_NAME=Tu Tienda Online
+EMAIL_SENDER_NAME="Tu Tienda Online"
 
 
 
