--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
     "test:smoke:locations": "jest --testPathPattern=tests/smoke/locations --detectOpenHandles --forceExit",
     "test:smoke:payments": "jest --testPathPattern=tests/smoke/payments --detectOpenHandles --forceExit",
     "test:smoke:calculator": "jest --testPathPattern=price-calculator.smoke.test.ts --detectOpenHandles --forceExit",
+    "test:rate-limit": "jest --testPathPattern=rate-limit --runInBand --detectOpenHandles",
+    "test:rate-limit:unit": "jest --testPathPattern=test/unit.*rate-limit --runInBand",
+    "test:rate-limit:integration": "jest --testPathPattern=test/integration.*rate-limit --runInBand",
+    "test:rate-limit:performance": "jest --testPathPattern=test/performance.*rate-limit --runInBand --detectOpenHandles --forceExit",
+    "test:rate-limit:envs": "jest --testPathPattern=rate-limit-envs.test.ts --runInBand",
     "test:watch": "jest --watch --selectProjects unit-integration",
     "test:coverage": "jest --coverage --runInBand --detectOpenHandles --selectProjects unit-integration",
     "test:all": "jest --runInBand --detectOpenHandles",
